--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-        // Intersection Observer para animaciones<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
